got css working

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Help Form</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<script type="text/javascript">
 		// validate form submission
 		var validateForm = function(){
