woohoo twilio works...kinda

--- a/static/html/success.html
+++ b/static/html/success.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Help Form</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body class="container-fluid">
 	<div class="text-center row" style="margin-top: 10vh">
