--- a/static/html/success.html
+++ b/static/html/success.html
@@ -4,6 +4,7 @@
 	<title>Help Form</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="icon" href="/img/apple-touch-icon.png">
 </head>
 <body class="container-fluid">
 	<div class="text-center row" style="margin-top: 10vh">
