--- a/static/html/index.html
+++ b/static/html/index.html
@@ -7,8 +7,29 @@
 	<link rel="icon" href="/img/apple-touch-icon.png">
 	<script type="text/javascript">
 		// validate form submission
-		var validateForm = function(){
-			
+		var validateForm = function(event){
+			event.preventDefault();
+			// check name
+			if(document.getElementById('help-name').value.length == 0){
+				alert('name');
+				return false;
+			}
+			// check phone
+			// check location
+			if(document.getElementById('help-location').value.length == 0){
+				alert('location');
+				return false;
+			}
+			// check problem statement
+			if(document.getElementById('help-details').value.length == 0){
+				return false;
+			}
+			// check tag
+			if(document.getElementById('help-tags').value.length == 0){
+				return false;
+			}
+			// if all conditions pass, submit form
+			return true;	
 		}
 	</script>
 </head>
@@ -21,28 +42,28 @@
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<form id="mentor-form" name="mentor-request" action="/submit-request" method="POST">
+			<form id="mentor-form" name="mentor-request" action="/submit-request" method="POST" onsubmit="return validateForm();">
 				<div class="row form-row">
-					<div class="col-md-offset-4 col-md-4"><input type="text" name="name" placeholder="Name"></div>
+					<div class="col-md-offset-4 col-md-4"><input id="help-name" type="text" name="name" placeholder="Name"></div>
 				</div>
 				<div class="row form-row">
-					<div class="col-md-offset-4 col-md-4"><input type="text" name="phone" placeholder="Phone +x (xxx) xxx-xxxx"></div>
+					<div class="col-md-offset-4 col-md-4"><input id="help-phone" type="text" name="phone" placeholder="Phone +x (xxx) xxx-xxxx"></div>
 				</div>
 				<div class="row form-row">
 					<div class="col-md-offset-4 col-md-4">
-						<input type="text" name="location" placeholder="Where are you working?">
+						<input id="help-location" type="text" name="location" placeholder="Where are you working?">
 					</div>
 				</div>
 				<div class="row form-row">
 					<div class="col-md-offset-4 col-md-4">
-						<textarea name="problem-description" placeholder="Please describe what you need help with."></textarea>
+						<textarea id="help-details" name="problem-description" placeholder="Please describe what you need help with."></textarea>
 					</div>
 				</div>
 				<div class="row form-row">
 					<div class="col-md-offset-4 col-md-4">
 						<p>#addTags #chooseAtLeastOne #becauseWe&lt;3hashtags</p>
 						<!-- These tags are currently hard-coded; would be great to dynamically generate from mentor database -->
-						<select name="tags" multiple="multiple">
+						<select id="help-tags" name="tags" multiple="multiple">
 							<option>#HTML</option>
 							<option>#CSS</option>
 							<option>#SASS</option>
@@ -70,7 +91,7 @@
 						</select>
 					</div>
 				</div>
-				<div class="row"><div class="text-center"><button type="submit" class="btn btn-lg form-large" onclick="validateForm()">Submit Request</button></div></div>
+				<div class="row"><div class="text-center"><button type="submit" class="btn btn-lg form-large">Submit Request</button></div></div>
 			</form>
 		</div>
 	</div>
